config/k8s/birdsquawk.yaml
apiVersion: v1
kind: Pod
metadata:
  name: birdsquawk
spec:
  containers:
    - name: birdsquawk
      image: nivekrapull/birdsquawk
