config/k8s/peep-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peep-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peep
  template:
    metadata:
      labels:
        app: peep
    spec:
      containers:
        - name: peep
          image: nivekrapull/peep:latest
---
apiVersion: v1
kind: Service
metadata:
  name: peeps-service
spec:
  selector:
    app: peep
  ports:
    - name: peep
      protocol: TCP
      port: 5100
      targetPort: 5100
