config/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/birdsquawk
            pathType: Prefix
            backend:
              service:
                name: birdsquawk-service
                port:
                  number: 5000
          - path: /api/peeps/?(.*)
            pathType: Prefix
            backend:
              service:
                name: peeps-service
                port:
                  number: 5100
          - path: /api/query/?(.*)
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 5200
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 3000
